# dd-localstack

./: .gitignore  Cargo.toml  README.md  build.rs
examples/go-example/: go.mod  go.sum  main.go
examples/swift-example/distributed-tracing/: Package.resolved  Package.swift
examples/swift-example/distributed-tracing/Sources/: program.swift
src/: datadog_span.rs  exporters.rs  httpbin.rs  main.rs  profile.rs  profiles.rs  rum.rs  traces.rs  tracing.rs
src/protos/: profile.proto
