[package]
name = "dd-localstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1"
flate2 = "1.0"
rmp-serde = "1.1.2"
futures = "0.3.29"
tempfile = "3.8.1"
serde = { version = "1.0.190", features = ["derive"] }